Un messed up some stuff

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="StyleSheets/styles.css">
     <title>Game</title>
 </head>
 <body>
     <script src="js/main.js" type="module"></script>
+    <p>dez</p>
+    <div style="width: 1000px; height: 1000px;" class="GameHolder"></div>
 </body>
 </html>
