--- a/html/game.html
+++ b/html/game.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../html/styles.css">
+    <link rel="stylesheet" href="StyleSheets/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game</title>
     
