Html and UI update

--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="StyleSheets/styles.css">
     <title>Game</title>
+    <h1 class="TitleText">GAME NAME</h1>
+    <h2 class="TitleText">THE GREATIST THING SINCE SLICED BREAD</h2>
 </head>
 <body>
     <script src="js/main.js" type="module"></script>
-    <p>dez</p>
-    <div style="width: 1000px; height: 1000px;" class="GameHolder"></div>
+    
+    <div  class="HomeMain">
+        <div id="ButtonHolder">
+            <a href="html/game.html"><button id="PlayButton" class="ButtonStyle">Play</button></a>
+            <a href="html/settings.html"><button id="SettingsButton" class="ButtonStyle">Settings</button></a>
+        </div>
+
+    </div>
 </body>
 </html>
