--- a/html/settings.html
+++ b/html/settings.html
@@ -7,6 +7,6 @@
     <title>Settings</title>
 </head>
 <body>
-    <script src="../js/main.js" type="module"></script>
+    <script type="module"></script>
 </body>
 </html>
