--- a/html/game.html
+++ b/html/game.html
@@ -10,9 +10,7 @@
 <body class="GameHolder">
     <script src="../js/main.js" type="module"></script>
     <div class="GameHolder">
-        <canvas style="width: 100%; height: 100%; border:1px solid #ffffff;">
-           
-        </canvas>
+        <canvas id="canvas" style="background-color: black; position: absolute;">
         <div id="TopUI"       class="UiBasic"></div>
         <div id="SideBarLeft" class="UiBasic"></div>
         <div id="SideBarRight"class="UiBasic"></div>
