peak tital name

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="StyleSheets/styles.css">
     <title>Game</title>
-    <h1 class="TitleText">GAME NAME</h1>
+    <h1 class="TitleText">SKIBIDi TOILET FACTORY SIM</h1>
     <h2 class="TitleText">THE GREATIST THING SINCE SLICED BREAD</h2>
 </head>
 <body>
