fix back coooooolor

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1 class="TitleText">SKIBIDi TOILET FACTORY SIM</h1>
     <h2 class="TitleText">THE GREATIST THING SINCE SLICED BREAD</h2>
 </head>
-<body>
+<body class="DarkBack">
     <script src="js/main.js" type="module"></script>
     
     <div  class="HomeMain">
