--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h2 class="TitleText">THE GREATIST THING SINCE SLICED BREAD</h2>
 </head>
 <body>
-    <script src="js/main.js" type="module"></script>
+    <script type="module"></script>
     
     <div  class="HomeMain">
         <div id="ButtonHolder">
