--- a/html/game.html
+++ b/html/game.html
@@ -9,12 +9,12 @@
 </head>
 <body class="GameHolder">
     <script src="../js/main.js" type="module"></script>
-    <div class="GameHolder">
-        <canvas id="canvas" style="background-color: black; position: absolute;">
+    <div class="GameHolder">   
         <div id="TopUI"       class="UiBasic"></div>
         <div id="SideBarLeft" class="UiBasic"></div>
         <div id="SideBarRight"class="UiBasic"></div>
         <div id="BottemUI"    class="UiBasic"></div>
+        <canvas id="canvas" style="background-color: black; position: absolute;"></canvas>
        
     </div>
     
