--- a/html/game.html
+++ b/html/game.html
@@ -10,7 +10,20 @@
 <body class="GameHolder">
     <script src="../js/main.js" type="module"></script>
     <div class="GameHolder">   
-        <div id="TopUI"       class="UiBasic"></div>
+        <div id="TopUI"       class="UiBasic">
+            <div class="ThreeWay">
+                <p id="MoneyText">Money:$10000000</p>
+                <p id="FactoryCountText">Factorys:1</p>
+            </div>
+            <div name="Sats" class="ThreeWay">
+                <p>GoodProduction:</p>
+                <p>GoodProduction:</p>
+                
+            </div>
+            <div class="ThreeWay">
+
+            </div>
+        </div>
         <div id="SideBarLeft" class="UiBasic"></div>
         <div id="SideBarRight"class="UiBasic"></div>
         <div id="BottemUI"    class="UiBasic"></div>
