added dynamic upgrades

--- a/html/game.html
+++ b/html/game.html
@@ -36,15 +36,15 @@
                     <label class="TextBase" for=""> 1K /sec</label>
                 </div>
             </div>
-            <div name="Upgrades box" class="UpgradeUIBox">
+            <div id="UpgradesBox" name="Upgrades box" class="UpgradeUIBox">
                 <div id="UpgradeRef" name="Upgrade holder" class="StatsBoxHolder">
                     <div name="UpgradeNameHolder" class="ThreeWay TextBase">
-                        <label for="">WorkersCount</label>
+                        <label id="UpgradeName" for="">WorkersCount</label>
                     </div>
                     <div name="LVL holder" class="ThreeWay TextBase">
-                        <label for="">VI</label>
+                        <label id="UpgradeLvl" for="">VI</label>
                     </div>
-                    <button name="Upgrade" id="UpgradeButton" class="ThreeWay"> $100</button>
+                    <button name="Upgrade" id="UpgradePrice" class="ThreeWay"> $100</button>
                 </div>
             </div>
         </div>
