Added numerals and stats

--- a/html/game.html
+++ b/html/game.html
@@ -30,10 +30,14 @@
                 <label class="TextBase" > Factory Name</label>
             </div>
             
-            <div name="StatsBox" class="UpgradeUIBox">
-                <div id="" class="StatsBoxHolder">
-                    <label class="TextBase" for="">Stat Name</label>
-                    <label class="TextBase" for=""> 1K /sec</label>
+            <div id="StatsBox" class="UpgradeUIBox">
+                <div id="StatsRef" class="StatsBoxHolder">
+                    <div class="TwoWay">
+                        <label class="TextBase" for="">Stat Name</label>
+                    </div>
+                    <div class="TwoWay">
+                        <label class="TextBase" for=""> 1K /sec</label>
+                    </div>
                 </div>
             </div>
             <div id="UpgradesBox" name="Upgrades box" class="UpgradeUIBox">
