--- a/html/game.html
+++ b/html/game.html
@@ -26,8 +26,8 @@
         </div>
         <div id="SideBarLeft" class="UiBasic"></div>
         <div id="SideBarRight"class="UiBasic" style="width: 15%; left: 85%;">
-            <div id="FactoryName">
-                <label class="TextBase" > Factory Name</label>
+            <div id="FactoryName"style="width: 100%; height: 6%;">
+                <p class="TextBase" style="font-size: 140%;" > Factory Name</p>
             </div>
             
             <div id="StatsBox" class="UpgradeUIBox">
