--- a/html/game.html
+++ b/html/game.html
@@ -65,7 +65,9 @@
             </div>
         </div>
         
-        <div id="BottemUI"    class="UiBasic"></div>
+        <div id="BottemUI"    class="UiBasic">
+            <p id="NewsReal" class="NewsReal"> text asddasdasdasdasd</p>
+        </div>
         <canvas id="canvas" style="background-color: black; position: absolute;"></canvas>
        
     </div>
