Updates to UI and stuff

--- a/html/game.html
+++ b/html/game.html
@@ -11,16 +11,18 @@
     <script src="../js/main.js" type="module"></script>
     <div class="GameHolder">   
         <div id="TopUI"       class="UiBasic">
-            <div class="ThreeWay">
-                <p id="MoneyText">Money:$10000000</p>
-                <p id="FactoryCountText">Factorys:1</p>
+            <div class="InfoDisplay">
+                <img src="/sprites/Money.png" class="InfoImg" alt="">
+                <p id="MoneyText" class="InfoText">Money:$10000000</p>
             </div>
-            <div name="Sats" class="ThreeWay">
-                <p>GoodProduction:</p>
-                <p>GoodProduction:</p>
-                
+            <div class="InfoDisplay">
+                <img src="/sprites/Factory.png" class="InfoImg" alt="">
+                <p id="FactoryCountText" class="InfoText">Factorys:1</p>
             </div>
-            <div class="ThreeWay">
+            <div class="InfoDisplay">
+                <img src="/sprites/LineGoseUp.png" class="InfoImg" alt="">
+                <p id="ProductionDisplay" class="InfoText">Production:1</p>
+            </div>
 
             </div>
         </div>
