added Day night cylce

--- a/html/game.html
+++ b/html/game.html
@@ -23,6 +23,10 @@
                 <img src="/sprites/LineGoseUp.png" class="InfoImg" alt="">
                 <p id="ProductionDisplay" class="InfoText">Production:1</p>
             </div>
+            <div class="InfoDisplay">
+                <img src="/sprites/Debt.png" class="InfoImg" alt="">
+                <p id="DebtDisplay" class="InfoText">Debt:-100000</p>
+            </div>
 
             </div>
         </div>
