Add UI and economy Var

--- a/html/game.html
+++ b/html/game.html
@@ -24,6 +24,10 @@
                 <p id="ProductionDisplay" class="InfoText">Production:1</p>
             </div>
             <div class="InfoDisplay">
+                <img src="/sprites/Time.png" class="InfoImg" alt="">
+                <p id="TimeDisplay" class="InfoText">Time:1</p>
+            </div>
+            <div class="InfoDisplay">
                 <img src="/sprites/Debt.png" class="InfoImg" alt="">
                 <p id="DebtDisplay" class="InfoText">Debt:-100000</p>
             </div>
