UI stuff and quarterly update

--- a/html/game.html
+++ b/html/game.html
@@ -31,6 +31,10 @@
                 <img src="/sprites/Debt.png" class="InfoImg" alt="">
                 <p id="DebtDisplay" class="InfoText">Debt:-100000</p>
             </div>
+            <div class="InfoDisplay">
+                <img src="/sprites/Goods.png" class="InfoImg" alt="">
+                <p id="GoodsDisplay" class="InfoText">UnSoldGoods:-100000</p>
+            </div>
 
             </div>
         </div>
