--- a/html/game.html
+++ b/html/game.html
@@ -42,10 +42,10 @@
         <div id="SideBarLeft" class="UiBasic">
             <button id="DelButon">X</button>
             <div id="PolicyHolder 0" class="Policy">
-                <label for="" style="width: 40%;line-height: 200%;">Workers</label>
+                <p for="" class="PolicyLable">Workers</p>
                 <div id="ChangePolicy" class="ChangePolicy">
                     <button class="Dec PolicyChange"></button>
-                    <label for="" style="line-height: 200%; width: 20%;">100</label>
+                        <p class="PolicyChangeTex" for="">100</p>
                     <button class="Inc PolicyChange"></button>
                 </div>
             </div>
