Factory upgrade UI

--- a/html/game.html
+++ b/html/game.html
@@ -71,7 +71,7 @@
                 </div>
             </div>
             <div id="UpgradesBox" name="Upgrades box" class="UpgradeUIBox">
-                <div id="UpgradeRef" name="Upgrade holder" class="StatsBoxHolder">
+                <div id="UpgradeRef 0" name="Upgrade holder" class="StatsBoxHolder">
                     <div name="UpgradeNameHolder" class="ThreeWay TextBase">
                         <label id="UpgradeName" for="">WorkersCount</label>
                     </div>
