--- a/html/game.html
+++ b/html/game.html
@@ -86,6 +86,11 @@
         <div id="BottemUI"    class="UiBasic">
             <p id="NewsReal" class="NewsReal"> text asddasdasdasdasd</p>
         </div>
+        <div id="EventDisplay">
+            <h1>Title</h1>
+            <h3>What happend</h3>
+            <button>ok</button>
+        </div>
         <canvas id="canvas" style="background-color: black; position: absolute;"></canvas>
        
     </div>
