--- a/html/game.html
+++ b/html/game.html
@@ -87,9 +87,15 @@
             <p id="NewsReal" class="NewsReal"> text asddasdasdasdasd</p>
         </div>
         <div id="EventDisplay">
-            <h1>Title</h1>
-            <h3>What happend</h3>
-            <button>ok</button>
+            <div style="width: 100%; height: 50%;">
+                <h1>Title</h1>
+            </div>
+            <div style="width: 100%; height: 25%;"">
+                <h3>What happend</h3>
+            </div>
+            <div style="width: 100%; height: 25%;"">
+                <button>ok</button>
+            </div>
         </div>
         <canvas id="canvas" style="background-color: black; position: absolute;"></canvas>
        
