--- a/html/game.html
+++ b/html/game.html
@@ -86,15 +86,15 @@
         <div id="BottemUI"    class="UiBasic">
             <p id="NewsReal" class="NewsReal"> text asddasdasdasdasd</p>
         </div>
-        <div id="EventDisplay">
+        <div id="EventDisplay" class="UiBasic">
             <div style="width: 100%; height: 50%;">
-                <h1>Title</h1>
+                <h1 style="text-align: center;">Title</h1>
             </div>
             <div style="width: 100%; height: 25%;"">
-                <h3>What happend</h3>
+                <h3 style="text-align: center;">What happend</h3>
             </div>
             <div style="width: 100%; height: 25%;"">
-                <button>ok</button>
+                <button style="align-self: center;padding: auto;">ok</button>
             </div>
         </div>
         <canvas id="canvas" style="background-color: black; position: absolute;"></canvas>
