--- a/html/game.html
+++ b/html/game.html
@@ -40,7 +40,7 @@
         </div>
         
         <div id="SideBarLeft" class="UiBasic">
-            <button id="DelButon">X</button>
+            <button id="DelButon">Delete Factory</button>
             <div id="PolicyBoxHolder" class="PolicyBoxHolder">
                 <div id="PolicyHolder 0" class="Policy">
                     <p for="" class="PolicyLable">Workers</p>
@@ -87,14 +87,14 @@
             <p id="NewsReal" class="NewsReal"> text asddasdasdasdasd</p>
         </div>
         <div id="EventDisplay" class="UiBasic">
-            <div style="width: 100%; height: 50%;">
+            <div style="width: 100%; height: 35%;">
                 <h1 style="text-align: center;">Title</h1>
             </div>
-            <div style="width: 100%; height: 25%;"">
+            <div style="width: 100%; height: 35%;"">
                 <h3 style="text-align: center;">What happend</h3>
             </div>
             <div style="width: 100%; height: 25%;"">
-                <button style="align-self: center;padding: auto;">ok</button>
+                <button style="align-self: center;width: 25%; margin-left: 35%; ;">ok</button>
             </div>
         </div>
         <canvas id="canvas" style="background-color: black; position: absolute;"></canvas>
