--- a/html/game.html
+++ b/html/game.html
@@ -86,7 +86,7 @@
         <div id="BottemUI"    class="UiBasic">
             <p id="NewsReal" class="NewsReal"> text asddasdasdasdasd</p>
         </div>
-        <div id="EventDisplay" class="UiBasic">
+        <div style="border-radius: 20px;" id="EventDisplay" class="UiBasic">
             <div style="width: 100%; height: 35%;">
                 <h1 style="text-align: center;">Title</h1>
             </div>
