added paying debts

--- a/html/game.html
+++ b/html/game.html
@@ -29,6 +29,7 @@
             </div>
             <div class="InfoDisplay">
                 <img src="/sprites/Debt.png" class="InfoImg" alt="">
+                <button id="PayDebt">Pay</button>
                 <p id="DebtDisplay" class="InfoText">Debt:-100000</p>
             </div>
             <div class="InfoDisplay">
