added factory buutons

--- a/html/game.html
+++ b/html/game.html
@@ -36,9 +36,12 @@
                 <img src="/sprites/Goods.png" class="InfoImg" alt="">
                 <p id="GoodsDisplay" class="InfoText">UnSoldGoods:-100000</p>
             </div>
-
+            <div id="THING" class="InfoDisplay">
+                
             </div>
+
         </div>
+    </div>
         
         <div id="SideBarLeft" class="UiBasic">
             <button id="DelButon">Delete Factory</button>
