--- a/html/game.html
+++ b/html/game.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="../StyleSheets/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game</title>
+    <link rel="icon" type="image/x-icon" href="sprites/factory1.png">
     
 </head>
 <body class="GameHolder">
@@ -38,7 +39,7 @@
                 <img src="/sprites/Goods.png" class="InfoImg" alt="">
                 <p id="GoodsDisplay" class="InfoText">UnSoldGoods:-100000</p>
             </div>
-            <div id="THING" style="scroll-behavior: auto;" class="InfoDisplay">
+            <div id="THING" style="scroll-behavior: auto; width: 50%; overflow: scroll;" class="InfoDisplay">
                 
             </div>
 
