--- a/html/game.html
+++ b/html/game.html
@@ -91,7 +91,9 @@
         </div>
         
         <div id="BottemUI" class="UiBasic">
-            <p id="NewsReal" style="position: absolute;" class="NewsReal"> text asddasdasdasdasd</p>
+            <button id="SaveButton">Save</button>
+            <button id="LoadButton">Load</button>
+            <p id="NewsReal" style="position: absolute; width: 90%;" class="NewsReal"> text asddasdasdasdasd</p>
         </div>
         <div style="border-radius: 20px;" id="EventDisplay" class="UiBasic">
             <div style="width: 100%; height: 35%;">
