--- a/html/game.html
+++ b/html/game.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="sprites/factory1.png">
     
 </head>
-<body class="GameHolder">
+<body class="GameHolder" style="overflow: hidden;">
     <script src="../js/main.js" type="module"></script>
     
     <div class="GameHolder"> 
@@ -99,10 +99,10 @@
             <div style="width: 100%; height: 35%;">
                 <h1 style="text-align: center;">Title</h1>
             </div>
-            <div style="width: 100%; height: 35%;"">
+            <div style="width: 100%; height: 35%;">
                 <h3 style="text-align: center;">What happend</h3>
             </div>
-            <div style="width: 100%; height: 25%;"">
+            <div style="width: 100%; height: 25%;">
                 <button style="align-self: center;width: 25%; margin-left: 35%; ;">ok</button>
             </div>
         </div>
